--- a/README
+++ b/README
@@ -1,23 +1,32 @@
 HoptoadNotifier
 ===============
 
-This is the notifier plugin for integrating apps with Hoptoad. When an
-uncaught exception occurs, HoptoadNotifier will POST the relevant data
-to the Hoptoad server specified in your environment.rb
+This is the notifier plugin for integrating apps with Hoptoad.
+
+When an uncaught exception occurs, HoptoadNotifier will POST 
+the relevant data to the Hoptoad server specified in your environment.
+
+You should have something like this in your environment.rb file 
+(or config/initializers/hoptoad.rb in rails 2).
 
   HoptoadNotifier.configure do |config|
-    config.host         = "hoptoad.thoughtbot.com"
+    config.host         = 'hoptoad.thoughtbot.com'
     config.port         = 80
-    config.project_name = "my sweet app"
+    config.project_name = 'my fancy application'
   end
   
-Then make sure you have
+Then, to enable hoptoad in your appication, include this code:
 
   include HoptoadNotifier::Catcher
 
-in your ApplicationController, and all exceptions will be logged to Hoptoad
-where they can be aggregated, filtered, and searched.
+in your ApplicationController, and all exceptions will be logged 
+to Hoptoad where they can be aggregated, filtered, sorted, 
+analyzed, massaged and searched.
 
-You can test hoptoad from the production environment by running 'rake hoptoad:test'
-from your RAILS_ROOT.
+You can test that hoptoad is working in your production environment 
+by using this rake task (from RAILS_ROOT):
 
+	rake hoptoad:test RAILS_ENV=production
+
+If everything is configured properly, that task will send a notice 
+to hoptoad which will be visible immediately.
