Fixed bug related to refactoring of #ignore=, added InvalidAuthenticityToken error as a default ignored error class.
git-svn-id: https://svn.thoughtbot.com/plugins/hoptoad_notifier/trunk@436 7bbfaf0e-4d1d-0410-9690-a8bb5f8ef2aa

--- a/README
+++ b/README
@@ -76,6 +76,7 @@ notifications (when #notify is called directly).
 Hoptoad ignores the following exceptions by default:
   ActiveRecord::RecordNotFound
   CGI::Session::CookieStore::TamperedWithCookie
+  ActionController::InvalidAuthenticityToken
   
 To ignore errors in addition to those, specify their names in your Hoptoad 
 configuration block.
