--- a/INSTALL
+++ b/INSTALL
@@ -15,28 +15,29 @@ From your project's RAILS_ROOT, run:
 
 CONFIGURATION
 
-You should have something like this in your environment.rb file (or 
-config/initializers/hoptoad.rb in rails 2).
+You should have something like this in config/initializers/hoptoad.rb.
 
   HoptoadNotifier.configure do |config|
     config.api_key = '1234567890abcdef'
   end
   
+(Please note that this configuration should be in a global configuration, and
+is *not* enrivonment-specific. Hoptoad is smart enough to know what errors are
+caused by what environments, so your staging errors don't get mixed in with
+your production errors.)
+
 Then, to enable hoptoad in your appication, include this code...
 
   include HoptoadNotifier::Catcher
 
 ...at the top of your ApplicationController, and all exceptions will be logged 
-to Hoptoad where they can be aggregated, filtered, sorted, analyzed, massaged 
+to Hoptoad where they can be aggregated, filtered, sorted, analyzed, massaged,
 and searched.
 
 You can test that hoptoad is working in your production environment by using 
 this rake task (from RAILS_ROOT):
 
-  rake hoptoad:test RAILS_ENV=production
+  rake hoptoad:test
 
 If everything is configured properly, that task will send a notice to hoptoad 
-which will be visible immediately. Note that your app must be able to run in
-production mode for this rake task to work, so it's quite possible that you can't
-run it from your development environment. Due to the way the exception handling
-works, this test can't be run from the development environment.
+which will be visible immediately.
