--- a/README
+++ b/README
@@ -6,7 +6,6 @@ This is the notifier plugin for integrating apps with Hoptoad.
 When an uncaught exception occurs, HoptoadNotifier will POST the relevant data 
 to the Hoptoad server specified in your environment.
 
-
 INSTALLATION
 
 From your project's RAILS_ROOT, run:
@@ -65,6 +64,45 @@ controller, you can do something like this:
 The #notify_hoptoad call will send the notice over to hoptoad for later 
 analysis.
 
+GOING BEYOND EXCEPTIONS
+
+You can also pass a hash to notify_hoptoad method and store whatever you want, not just an exception. And you can also use it anywhere, not just in controllers:
+
+  begin 
+    params = { 
+      :quantity => total_quantity, 
+      :weight => total_weight, 
+      :country => country, 
+      :postcode => postcode 
+    } 
+  rescue => e
+    HoptoadNotifier.notify(
+      :error_class => "Special Error", 
+      :error_message => "Special Error: #{e.message}", 
+      :request => { :params => params }
+    )
+  end
+
+While in your controllers you use the notify_hoptoad method, anywhere else in your code, use HoptoadNotifier.notify. Hoptoad will get all the information about the error itself. As for a hash, these are the keys you should pass:
+
+  * :error_class – Use this to group similar errors together. When Hoptoad catches an exception it sends the class name of that exception object.
+  * :error_message – This is the title of the error you see in the errors list. For exceptions it is "#{exception.class.name}: #{exception.message}"
+  * :request – While there are several ways to send additional data to Hoptoad, passing a Hash with :params key as :request as in the example above is the most common use case. When Hoptoad catches an exception in a controller, the actual HTTP client request is being sent using this key.
+
+Hoptoad merges the hash you pass with these default options:
+
+  def default_notice_options
+    { 
+      :api_key => HoptoadNotifier.api_key, 
+      :error_message => 'Notification', 
+      :backtrace => caller, 
+      :request => {}, 
+      :session => {}, 
+      :environment => ENV.to_hash 
+    } 
+  end
+
+You can override any of those parameters.
 
 FILTERING
 
@@ -97,7 +135,6 @@ To ignore *only* certain errors (and override the defaults), use the
     config.ignore_only  = [ActiveRecord::IgnoreThisError]
   end
 
-
 TESTING
 
 When you run your tests, you might notice that the hoptoad service is recording
@@ -110,3 +147,8 @@ errors are not reported while running tests.
       # do nothing.
     end
   end
+
+THANKS
+
+Thanks to Eugene Bolshakov for the excellent write-up on GOING BEYOND EXCEPTIONS, which we have included above.
+
