--- a/README
+++ b/README
@@ -146,6 +146,15 @@ To ignore *only* certain errors (and override the defaults), use the
     config.ignore_only  = [ActiveRecord::IgnoreThisError]
   end
 
+To ignore certain user agents, add in the #ignore_user_agent attribute as a
+string or regexp:
+
+  HoptoadNotifier.configure do |config|
+    config.api_key      = '1234567890abcdef'
+    config.ignore_user_agent  << /Ignored/
+    config.ignore_user_agent << 'IgnoredUserAgent'
+  end
+
 TESTING
 
 When you run your tests, you might notice that the hoptoad service is recording
