--- a/README.rdoc
+++ b/README.rdoc
@@ -218,18 +218,10 @@ errors are not reported while running tests.
     end
   end
 
-== Supported rails versions
+== Supported Rails versions
 
-the notifier currently supports the following versions of Rails:
-
-* 1.2.6
-* 2.0.2
-* 2.1.0
-* 2.1.2
-* 2.2.2
-* 2.3.2
-* 2.3.3
-* 2.3.4
+See SUPPORTED_RAILS_VERSIONS for a list of official supported versions of
+Rails.
 
 Please open up a support ticket on Tender ( http://help.hoptoadapp.com ) if
 you're using a version of Rails that is not listed above and the notifier is
